# tako

./: .gitignore  Cargo.toml  README.md
tako-cli/: Cargo.toml
tako-cli/src/: args.rs  main.rs
tako-config/: Cargo.toml
tako-config/src/: lib.rs
tako-core/: Cargo.toml
tako-core/src/: core.rs  lib.rs  ui.rs
tako-core/src/_old/: lib.rs
tako-core/src/table/: mod.rs  table.rs
tako-macro/: Cargo.toml
tako-macro/src/: lib.rs  module.rs
tako-shared/: Cargo.toml
tako-shared/src/: lib.rs  ro_cell.rs  terminal.rs  time.rs
tako-shared/src/event/: event.rs  mod.rs
tako-storage/: Cargo.toml
tako-storage/src/: xdg.rs
tako-taskmgr/: Cargo.toml
tako-taskmgr/src/: main.rs  ui.rs
tako-taskmgr/src/app/: app.rs  app_1.rs  mod.rs
tako-taskmgr/src/app/commands/: mod.rs  quit.rs
tako-widgets/: Cargo.toml
tako-widgets/src/: lib.rs  view.rs
