[workspace]
resolver        = "2"
members = [ "tako-cli", "tako-core", "tako-taskmgr", "tako-widgets" ]
# members         = [ "tako-*" ]
# default-members = [ "tako-fm", "tako-cli" ]

[profile.release]
codegen-units = 1
lto   = true
panic = "abort"
strip = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[workspace.dependencies]
ansi-to-tui   = "7.0.0"
anyhow        = "1.0.99"
clap          = { version = "4.5.47", features = [ "derive" ] }
crossterm     = { version = "0.29.0", features = [ "event-stream" ] }
# dirs          = "6.0.0"
directories   = "5"
ratatui       = { version = "0.29.0", features = [ "unstable-rendered-line-info", "unstable-widget-ref" ] }
regex         = "1.11.2"
serde         = { version = "1.0.225",  features = [ "derive" ] }
serde_json    = "1.0.145"
tokio         = { version = "1.47.1", features = ["full"] }
tokio-stream  = "0.1.17"
toml          = { version = "0.9.5" }
tracing       = { version = "0.1.41" }
unicode-width = { version = "0.2.0", default-features = false }

