[package]
name        = "tako-cli"
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
authors     = [ "DehKaine <kouteki9@gmail.com>" ]
description = "Tako command-line interface"
homepage    = ""
repository  = "https://github.com/DehKaine/tako"

[dependencies]
tako-core = { path = "../tako-core"}
tako-macro = { path = "../tako-macro"}

# External build dependencies
anyhow    = { workspace = true }
clap      = { workspace = true }
crossterm = { workspace = true }
toml      = { workspace = true }

[[bin]]
name = "tk"
path = "src/main.rs"
