[package]
name        = "tako-core"
version     = "0.0.1"
edition     = "2024"
license     = "MIT"
authors     = [ "DehKaine <kouteki@gmail.com>" ]
description = "Tako core"
homepage    = ""
repository  = "https://github.com/DehKaine/tako"

[dependencies]
tako-macro = { path = "../tako-macro" }

# External build dependencies
anyhow      = { workspace = true }
crossterm   = { workspace = true }
directories = { workspace = true }
ratatui     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

