[package]
name        = "tako-shared"
version     = "0.0.1"
edition     = "2024"
license     = "MIT"
authors     = [ "DehKaine" ]
description = "Tako shared library"
repository  = "https://github.com/DehKaine/tako"

[dependencies]
tako-macro = { path = "../tako-macro" }

# External dependencies
anyhow      = { workspace = true }
crossterm   = { workspace = true }
serde = { workspace = true }

