[package]
name        = "tako-storage"
version     = "0.0.1"
edition     = "2024"
license     = "MIT"
authors     = [ "DehKaine" ]
description = "Tako storage"
repository  = "https://github.com/DehKaine/tako"

[dependencies]
tako-macro = { path = "../tako-macro" }

# External dependencies
anyhow      = { workspace = true }
crossterm   = { workspace = true }
directories = { workspace = true }
ratatui     = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }

