[package]
name        = "tako-widgets"
version     = "0.0.1"
edition     = "2024"
license     = "MIT"
authors     = [ "DehKaine" ]
description = "Tako component"
repository  = "https://github.com/DehKaine/tako"

[dependencies]
tako-macro = { path = "../tako-macro" }

# External dependencies
anyhow    = { workspace = true }
crossterm = { workspace = true }
dirs      = { workspace = true }
ratatui   = { workspace = true }
toml      = { workspace = true }

